# sfml-playground

./: .gitignore  CMakeLists.txt  README.md  local-build.cmd  local-cpk-build.cmd
cmake/modules/: FindSFML.cmake
